{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 142,
  "lineage": "24bcc4de-62c8-56ef-75d7-43036d5d4943",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0298c9e0d2c86b0ed",
            "arn": "arn:aws:ec2:eu-west-1:029718257588:instance/i-05ba5a07f99f163c1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ba5a07f99f163c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0629a33a5997f9182",
            "private_dns": "ip-192-168-254-246.eu-west-1.compute.internal",
            "private_ip": "192.168.254.246",
            "public_ip": "54.171.175.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07499390e8592499c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-042dcc932a7e12a94"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012e032315434bf43",
            "tags": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "tags_all": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042dcc932a7e12a94"
            ]
          },
          "dependencies": [
            "aws_security_group.instance",
            "aws_subnet.test-subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:029718257588:internet-gateway/igw-0f0ad90ebef3f073d",
            "id": "igw-0f0ad90ebef3f073d",
            "owner_id": "029718257588",
            "tags": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "tags_all": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "vpc_id": "vpc-0cb253578e63e467b"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:029718257588:route-table/rtb-03d4afe02ec27f7be",
            "id": "rtb-03d4afe02ec27f7be",
            "owner_id": "029718257588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0ad90ebef3f073d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "tags_all": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "vpc_id": "vpc-0cb253578e63e467b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b61f7ba3daaee1a",
            "route_table_id": "rtb-03d4afe02ec27f7be",
            "subnet_id": "subnet-012e032315434bf43"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.test-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:029718257588:security-group/sg-042dcc932a7e12a94",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-042dcc932a7e12a94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210811165144033800000001",
            "name_prefix": "terraform-",
            "owner_id": "029718257588",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cb253578e63e467b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:029718257588:subnet/subnet-012e032315434bf43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.254.240/28",
            "id": "subnet-012e032315434bf43",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029718257588",
            "tags": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "tags_all": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "vpc_id": "vpc-0cb253578e63e467b"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:029718257588:vpc/vpc-0cb253578e63e467b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.254.128/25",
            "default_network_acl_id": "acl-0f9a0b9617b3258b9",
            "default_route_table_id": "rtb-073891b2463f23f9f",
            "default_security_group_id": "sg-03c1c7f8c1851eb37",
            "dhcp_options_id": "dopt-758e6410",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cb253578e63e467b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-073891b2463f23f9f",
            "owner_id": "029718257588",
            "tags": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            },
            "tags_all": {
              "Name": "testing-terraform-test-frameworks",
              "onwer": "TomY8s"
            }
          }
        }
      ]
    }
  ]
}